--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -7,14 +7,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:51:08.886604Z",
-     "start_time": "2024-12-11T10:51:01.891858Z"
+     "end_time": "2024-12-12T09:40:12.169220Z",
+     "start_time": "2024-12-12T09:40:02.947991Z"
     }
    },
    "outputs": [],
    "source": [
     "# import SNLI dataset from h\n",
     "from datasets import load_dataset\n",
+    "\n",
     "dataset = load_dataset(\"snli\")\n",
     "# Access the splits\n",
     "train_data = dataset['train']\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import re\n",
@@ -169,15 +170,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:51:08.902197Z",
-     "start_time": "2024-12-11T10:51:08.892834Z"
+     "end_time": "2024-12-12T09:40:12.203663Z",
+     "start_time": "2024-12-12T09:40:12.183915Z"
     }
    },
    "id": "1fee0ccf675459f4"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def compare_texts(text1, text2):\n",
@@ -239,6 +240,13 @@
     "            text1 = text1.replace(\" \", \"\\u00A0\")\n",
     "            text2 = text2.replace(\" \", \"\\u00A0\")\n",
     "\n",
+    "    # Random chance to change the dialect for both texts\n",
+    "    if random.random() < 0.5:\n",
+    "        # Randomly select a dialect from DIALECTS\n",
+    "        dialect = random.choice(DIALECTS)\n",
+    "        text1 = dialect.transform(text1)\n",
+    "        text2 = dialect.transform(text2)\n",
+    "\n",
     "    # Random chance to toggle apostrophe encoding for both\n",
     "    # If we have apostrophes, switch them from `'` to `’` or vice versa\n",
     "    apos1 = apostrophe_encoding(text1)\n",
@@ -262,11 +270,91 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:51:08.905636Z",
-     "start_time": "2024-12-11T10:51:08.898476Z"
+     "end_time": "2024-12-12T09:40:12.216293Z",
+     "start_time": "2024-12-12T09:40:12.213794Z"
     }
    },
    "id": "3dd4afabfbbafb88"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting en-core-web-sm==3.7.1\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m12.8/12.8 MB\u001B[0m \u001B[31m28.2 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\n",
+      "\u001B[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from en-core-web-sm==3.7.1) (3.7.4)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.10)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.0.8)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.9)\n",
+      "Requirement already satisfied: thinc<8.3.0,>=8.2.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (8.2.3)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.1.2)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.4.8)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.0.10)\n",
+      "Requirement already satisfied: weasel<0.4.0,>=0.1.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.3.4)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.9.4)\n",
+      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (6.4.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (4.66.2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.31.0)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.7.1)\n",
+      "Requirement already satisfied: jinja2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.1.3)\n",
+      "Requirement already satisfied: setuptools in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (68.2.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (24.0)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.4.0)\n",
+      "Requirement already satisfied: numpy>=1.19.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.26.4)\n",
+      "Requirement already satisfied: language-data>=1.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from langcodes<4.0.0,>=3.2.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.2.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.18.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.18.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (4.11.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2024.7.4)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from thinc<8.3.0,>=8.2.2->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.7.11)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from thinc<8.3.0,>=8.2.2->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.1.4)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from typer<0.10.0,>=0.3.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (7.1.1)\n",
+      "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from weasel<0.4.0,>=0.1.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from jinja2->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.1.5)\n",
+      "Requirement already satisfied: marisa-trie>=0.7.7 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.1.0)\n",
+      "\u001B[38;5;2m✔ Download and installation successful\u001B[0m\n",
+      "You can now load the package via spacy.load('en_core_web_sm')\n",
+      "\u001B[38;5;3m⚠ Restart to reload dependencies\u001B[0m\n",
+      "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
+      "order to load all the package's dependencies. You can do this by selecting the\n",
+      "'Restart kernel' or 'Restart runtime' option.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package cmudict to /Users/anna/nltk_data...\n",
+      "[nltk_data]   Package cmudict is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /Users/anna/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from multivalue import Dialects\n",
+    "DIALECTS = [Dialects.ColloquialSingaporeDialect(), Dialects.AfricanAmericanVernacular(), Dialects.ChicanoDialect(), Dialects.IndianDialect(), Dialects.AppalachianDialect(), \n",
+    "            Dialects.NorthEnglandDialect(), Dialects.MalaysianDialect(), Dialects.AustralianDialect(), Dialects.HongKongDialect(), Dialects.NewZealandDialect(),\n",
+    "            Dialects.NigerianDialect(), Dialects.PakistaniDialect(), Dialects.PhilippineDialect(), Dialects.SoutheastAmericanEnclaveDialect()]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T09:41:05.408061Z",
+     "start_time": "2024-12-12T09:40:12.217986Z"
+    }
+   },
+   "id": "c3018574e04c99ac"
   },
   {
    "cell_type": "code",
@@ -359,6 +447,23 @@
     "                        break\n",
     "    return t, changed\n",
     "\n",
+    "def dialect_transform(text2):\n",
+    "    # randomly select a dialect from DIALECTS\n",
+    "    changed = False\n",
+    "    attempts = 20  # limit attempts to avoid infinite loops\n",
+    "    # transform\n",
+    "    while not changed and attempts > 0:\n",
+    "        dialect = random.choice(DIALECTS)\n",
+    "        try:\n",
+    "            transformed_text = dialect.transform(text2)\n",
+    "        except IndexError:  # if the dialect transformation fails\n",
+    "            continue\n",
+    "        if transformed_text != text2:\n",
+    "            return transformed_text, True\n",
+    "        attempts -= 1\n",
+    "    return text2, False\n",
+    "        \n",
+    "\n",
     "def maybe_add_contraction(text1, text2):\n",
     "    # Only add a contraction if:\n",
     "    # - text1 can form contractions\n",
@@ -387,17 +492,17 @@
     "\n",
     "    return text2, False\n",
     "\n",
-    "def make_texts_distinct(text1, text2):\n",
-    "    initial_similarity = compare_texts(text1, text2)\n",
-    "    if initial_similarity < 1.0:\n",
-    "        # Already distinct enough (final similarity < initial similarity would mean final < initial)\n",
-    "        # but user wants strictly less than initial. Let's try to reduce further.\n",
-    "        target_similarity = 0.0 if initial_similarity == 0.0 else (initial_similarity - 0.01)\n",
-    "    else:\n",
-    "        # initial_similarity is 1.0 or close to it, we must get below that (e.g., <1.0)\n",
-    "        target_similarity = initial_similarity - 0.01\n",
     "\n",
+    "\n",
+    "def make_texts_distinct(text1, text2):\n",
+    "    \"\"\"\n",
+    "        Assumes to be called on SNLI text pairs\n",
+    "    :param text1: \n",
+    "    :param text2: \n",
+    "    :return: \n",
+    "    \"\"\"\n",
     "    transformations = [\n",
+    "        dialect_transform,\n",
     "        flip_quotes,\n",
     "        flip_capitalization,\n",
     "        toggle_end_punctuation,\n",
@@ -407,48 +512,64 @@
     "        lambda t: maybe_add_contraction(text1, t),\n",
     "    ]\n",
     "\n",
-    "    # Try transformations until we achieve a final similarity less than initial_similarity\n",
-    "    # We'll try each transformation one by one and apply only if it reduces similarity.\n",
-    "\n",
-    "    # Because we want to ensure difference, we may attempt multiple transformations.\n",
-    "    # We'll try a randomized approach: shuffle transformations and try them repeatedly\n",
-    "    # until we either succeed or exhaust attempts.\n",
     "    text_modified = text2\n",
     "    attempts = 20  # limit attempts to avoid infinite loops\n",
-    "\n",
     "    while attempts > 0:\n",
-    "        current_similarity = compare_texts(text1, text_modified)\n",
-    "        if current_similarity < initial_similarity:\n",
-    "            # We've achieved our goal: final similarity is less than initial\n",
+    "        if text_modified != text2:\n",
     "            return text_modified\n",
     "\n",
-    "        # Attempt a random transformation\n",
-    "        transform = random.choice(transformations)\n",
-    "        new_text, changed = transform(text_modified)\n",
-    "        if changed:\n",
-    "            # Check if similarity improved (decreased)\n",
-    "            new_similarity = compare_texts(text1, new_text)\n",
-    "            if new_similarity < current_similarity:\n",
-    "                # Keep this change\n",
+    "        # Attempt three random transformation\n",
+    "        three_trans = random.sample(transformations, 3)\n",
+    "        for transform in three_trans:\n",
+    "            new_text, changed = transform(text_modified)\n",
+    "            if changed:\n",
     "                text_modified = new_text\n",
-    "            # If new_similarity is not lower, revert to old text_modified (no change applied)\n",
     "        attempts -= 1\n",
     "\n",
     "    # If we exit the loop, we failed to reduce similarity\n",
-    "    return text_modified"
+    "    return text_modified\n",
+    "\n",
+    "\n",
+    "    "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:51:08.928134Z",
-     "start_time": "2024-12-11T10:51:08.909175Z"
+     "end_time": "2024-12-12T09:41:05.443903Z",
+     "start_time": "2024-12-12T09:41:05.414030Z"
     }
    },
    "id": "15964367d2573682"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I have talked with them yesterday.', True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_a = \"I talked with them yesterday.\"\n",
+    "text_b = \"Hello,\\u00a0world!\"\n",
+    "print(dialect_transform(text_a))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T09:37:35.031724Z",
+     "start_time": "2024-12-12T09:37:28.386386Z"
+    }
+   },
+   "id": "5de578f272ccd4c5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -467,8 +588,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:51:08.938443Z",
-     "start_time": "2024-12-11T10:51:08.911168Z"
+     "end_time": "2024-12-12T09:37:11.015339Z",
+     "start_time": "2024-12-12T09:37:11.011Z"
     }
    },
    "id": "7ed8d149c3e0256"
@@ -578,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -609,12 +730,12 @@
     "\n",
     "        # Check current similarity\n",
     "        initial_sim = compare_texts(premise, hypothesis)\n",
-    "        currently_similar = (initial_sim == 1.0)\n",
+    "        # currently_similar = (initial_sim == 1.0)\n",
     "\n",
-    "        if want_similar and not currently_similar:\n",
+    "        if want_similar:\n",
     "            # Make them similar\n",
     "            premise, hypothesis = make_texts_similar(premise, hypothesis)\n",
-    "        elif not want_similar and currently_similar:\n",
+    "        else:\n",
     "            # Make them distinct\n",
     "            hypothesis = make_texts_distinct(premise, hypothesis)\n",
     "\n",
@@ -637,9 +758,9 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:52:06.862266Z",
-     "start_time": "2024-12-11T10:51:08.921386Z"
+     "start_time": "2024-12-12T09:41:05.417825Z"
     }
    },
    "id": "498d9a270007d867"
