--- a/src/CORE.ipynb
+++ b/src/CORE.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T18:27:44.388320Z",
-     "start_time": "2024-12-11T18:27:42.086175Z"
+     "end_time": "2024-12-12T11:06:35.273897Z",
+     "start_time": "2024-12-12T11:06:32.415784Z"
     }
    },
    "outputs": [],
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "          register  document_id  \\\n0            OP AV       348059   \n1      NA OP SR OB      3086555   \n2            NA NE       355982   \n3            ID DF       437920   \n4            NA SR       389025   \n...            ...          ...   \n33900        NA NE      3254903   \n33901        ID DF      3271108   \n33902        NA NE        94422   \n33903        NA NE       263285   \n33904        OTHER       190517   \n\n                                                    text  \\\n0      Talk To Your Parents Sometimes, people just do...   \n1      The Top TEN 'Whiniest Sets of Fans' in English...   \n2      Ferry consultation needs deeper questions, say...   \n3      I'v been recording and mixing music for about ...   \n4      The 25-year-old did have chances at Anfield. B...   \n...                                                  ...   \n33900  DFL appears poised to regain Minnesota Senate ...   \n33901  If this is your first visit, be sure to check ...   \n33902  British Gas has increased energy prices by an ...   \n33903  Mitt Romney says U.S. Navy is smallest since 1...   \n33904  Mao's New World: Political Culture in the Earl...   \n\n                     full_label     label  \n0                  ['OP', 'AV']      [OP]  \n1      ['NA', 'OP', 'SR', 'OB']  [NA, OP]  \n2                  ['NA', 'NE']      [NA]  \n3                  ['ID', 'DF']      [ID]  \n4                  ['NA', 'SR']      [NA]  \n...                         ...       ...  \n33900              ['NA', 'NE']      [NA]  \n33901              ['ID', 'DF']      [ID]  \n33902              ['NA', 'NE']      [NA]  \n33903              ['NA', 'NE']      [NA]  \n33904                 ['OTHER']   [OTHER]  \n\n[33905 rows x 5 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>register</th>\n      <th>document_id</th>\n      <th>text</th>\n      <th>full_label</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>OP AV</td>\n      <td>348059</td>\n      <td>Talk To Your Parents Sometimes, people just do...</td>\n      <td>['OP', 'AV']</td>\n      <td>[OP]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NA OP SR OB</td>\n      <td>3086555</td>\n      <td>The Top TEN 'Whiniest Sets of Fans' in English...</td>\n      <td>['NA', 'OP', 'SR', 'OB']</td>\n      <td>[NA, OP]</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NA NE</td>\n      <td>355982</td>\n      <td>Ferry consultation needs deeper questions, say...</td>\n      <td>['NA', 'NE']</td>\n      <td>[NA]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ID DF</td>\n      <td>437920</td>\n      <td>I'v been recording and mixing music for about ...</td>\n      <td>['ID', 'DF']</td>\n      <td>[ID]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NA SR</td>\n      <td>389025</td>\n      <td>The 25-year-old did have chances at Anfield. B...</td>\n      <td>['NA', 'SR']</td>\n      <td>[NA]</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>33900</th>\n      <td>NA NE</td>\n      <td>3254903</td>\n      <td>DFL appears poised to regain Minnesota Senate ...</td>\n      <td>['NA', 'NE']</td>\n      <td>[NA]</td>\n    </tr>\n    <tr>\n      <th>33901</th>\n      <td>ID DF</td>\n      <td>3271108</td>\n      <td>If this is your first visit, be sure to check ...</td>\n      <td>['ID', 'DF']</td>\n      <td>[ID]</td>\n    </tr>\n    <tr>\n      <th>33902</th>\n      <td>NA NE</td>\n      <td>94422</td>\n      <td>British Gas has increased energy prices by an ...</td>\n      <td>['NA', 'NE']</td>\n      <td>[NA]</td>\n    </tr>\n    <tr>\n      <th>33903</th>\n      <td>NA NE</td>\n      <td>263285</td>\n      <td>Mitt Romney says U.S. Navy is smallest since 1...</td>\n      <td>['NA', 'NE']</td>\n      <td>[NA]</td>\n    </tr>\n    <tr>\n      <th>33904</th>\n      <td>OTHER</td>\n      <td>190517</td>\n      <td>Mao's New World: Political Culture in the Earl...</td>\n      <td>['OTHER']</td>\n      <td>[OTHER]</td>\n    </tr>\n  </tbody>\n</table>\n<p>33905 rows × 5 columns</p>\n</div>"
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,21 +44,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T18:13:06.772418Z",
-     "start_time": "2024-12-11T18:13:06.769397Z"
+     "end_time": "2024-12-12T11:09:36.005974Z",
+     "start_time": "2024-12-12T11:09:36.000723Z"
     }
    },
    "id": "e6a5e86b53c7d697"
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "label\n[NA]        12369\n[IN]         6522\n[OP]         5506\n[ID]         2293\n[NA, IN]     1250\n[NA, OP]     1135\n[HI]         1045\n[IP]          932\n[IN, OP]      502\n[LY]          448\n[SP]          409\n[OTHER]       407\n[IN, IP]      296\n[IN, HI]      247\n[OP, HI]      110\n[OP, IP]      105\n[NA, SP]       60\n[OP, ID]       59\n[NA, IP]       58\n[IN, ID]       29\n[IN, SP]       26\n[NA, ID]       19\n[OP, SP]       14\n[NA, HI]       11\n[NA, LY]       11\n[OP, LY]       10\n[ID, HI]        9\n[HI, IP]        8\n[IN, LY]        6\n[ID, SP]        3\n[ID, IP]        2\n[HI, LY]        2\n[IP, SP]        1\n[HI, SP]        1\nName: count, dtype: int64"
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,21 +69,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T18:13:06.781041Z",
-     "start_time": "2024-12-11T18:13:06.778412Z"
+     "end_time": "2024-12-12T11:09:37.865486Z",
+     "start_time": "2024-12-12T11:09:37.863292Z"
     }
    },
    "id": "cf577ff696b5f238"
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9t/lg86d6h9261dz33jq7hsw5ph0000gn/T/ipykernel_7026/326882372.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/9t/lg86d6h9261dz33jq7hsw5ph0000gn/T/ipykernel_7415/326882372.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T18:27:44.783124Z",
-     "start_time": "2024-12-11T18:27:44.756550Z"
+     "end_time": "2024-12-12T11:09:39.720633Z",
+     "start_time": "2024-12-12T11:09:39.689565Z"
     }
    },
    "id": "be0453e4f09d62c7"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# rename label to single genre\n",
@@ -152,15 +152,59 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T18:27:52.789560Z",
-     "start_time": "2024-12-11T18:27:52.784678Z"
+     "end_time": "2024-12-12T11:09:42.092510Z",
+     "start_time": "2024-12-12T11:09:42.086557Z"
     }
    },
    "id": "f25963613d82b02"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "# change \"NA\" in gener to \"NARRATIVE\"\n",
+    "df_train[\"genre\"] = df_train[\"genre\"].apply(lambda x: \"NARRATIVE\" if x == \"NA\" else x)\n",
+    "df_val[\"genre\"] = df_val[\"genre\"].apply(lambda x: \"NARRATIVE\" if x == \"NA\" else x)\n",
+    "df_test[\"genre\"] = df_test[\"genre\"].apply(lambda x: \"NARRATIVE\" if x == \"NA\" else x)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T11:15:04.088203Z",
+     "start_time": "2024-12-12T11:15:04.034065Z"
+    }
+   },
+   "id": "77eff6496958ca64"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "genre\nNARRATIVE    1766\nIN            934\nOP            784\nID            327\nHI            148\nIP            134\nLY             63\nSP             59\nName: count, dtype: int64"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val[\"genre\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T11:15:08.737754Z",
+     "start_time": "2024-12-12T11:15:08.734915Z"
+    }
+   },
+   "id": "6f1777b17e92fa66"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# save\n",
@@ -169,7 +213,11 @@
     "df_test.to_csv('../data/CORE/multilabel_test_cleaned.tsv', sep='\\t', index=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T11:15:16.132509Z",
+     "start_time": "2024-12-12T11:15:11.998995Z"
+    }
    },
    "id": "8bad0a986783540f"
   },
