--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-12T09:40:12.169220Z",
-     "start_time": "2024-12-12T09:40:02.947991Z"
+     "end_time": "2024-12-12T10:48:29.762422Z",
+     "start_time": "2024-12-12T10:48:20.898416Z"
     }
    },
    "outputs": [],
@@ -170,15 +170,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-12T09:40:12.203663Z",
-     "start_time": "2024-12-12T09:40:12.183915Z"
+     "end_time": "2024-12-12T10:48:29.775625Z",
+     "start_time": "2024-12-12T10:48:29.772496Z"
     }
    },
    "id": "1fee0ccf675459f4"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def compare_texts(text1, text2):\n",
@@ -243,9 +243,17 @@
     "    # Random chance to change the dialect for both texts\n",
     "    if random.random() < 0.5:\n",
     "        # Randomly select a dialect from DIALECTS\n",
-    "        dialect = random.choice(DIALECTS)\n",
-    "        text1 = dialect.transform(text1)\n",
-    "        text2 = dialect.transform(text2)\n",
+    "        attempts = 20  # limit attempts to avoid infinite loops\n",
+    "        changed = False\n",
+    "        while attempts > 0 and not changed:\n",
+    "            try:\n",
+    "                dialect = random.choice(DIALECTS)\n",
+    "                text1 = dialect.transform(text1)\n",
+    "                text2 = dialect.transform(text2)\n",
+    "                changed = True\n",
+    "            except:  # if the dialect transformation fails\n",
+    "                continue\n",
+    "            attempts -= 1\n",
     "\n",
     "    # Random chance to toggle apostrophe encoding for both\n",
     "    # If we have apostrophes, switch them from `'` to `’` or vice versa\n",
@@ -270,8 +278,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-12T09:40:12.216293Z",
-     "start_time": "2024-12-12T09:40:12.213794Z"
+     "end_time": "2024-12-12T11:16:12.754111Z",
+     "start_time": "2024-12-12T11:16:12.750917Z"
     }
    },
    "id": "3dd4afabfbbafb88"
@@ -286,7 +294,7 @@
      "text": [
       "Collecting en-core-web-sm==3.7.1\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
-      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m12.8/12.8 MB\u001B[0m \u001B[31m28.2 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m12.8/12.8 MB\u001B[0m \u001B[31m26.8 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\n",
       "\u001B[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from en-core-web-sm==3.7.1) (3.7.4)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/anna/anaconda3/envs/StyleTokenizer/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
@@ -350,15 +358,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-12T09:41:05.408061Z",
-     "start_time": "2024-12-12T09:40:12.217986Z"
+     "end_time": "2024-12-12T10:49:25.582706Z",
+     "start_time": "2024-12-12T10:48:29.790730Z"
     }
    },
    "id": "c3018574e04c99ac"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "import random\n",
@@ -456,7 +464,7 @@
     "        dialect = random.choice(DIALECTS)\n",
     "        try:\n",
     "            transformed_text = dialect.transform(text2)\n",
-    "        except IndexError:  # if the dialect transformation fails\n",
+    "        except:  # if the dialect transformation fails\n",
     "            continue\n",
     "        if transformed_text != text2:\n",
     "            return transformed_text, True\n",
@@ -502,7 +510,6 @@
     "    :return: \n",
     "    \"\"\"\n",
     "    transformations = [\n",
-    "        dialect_transform,\n",
     "        flip_quotes,\n",
     "        flip_capitalization,\n",
     "        toggle_end_punctuation,\n",
@@ -511,20 +518,23 @@
     "        toggle_number_format,\n",
     "        lambda t: maybe_add_contraction(text1, t),\n",
     "    ]\n",
-    "\n",
+    "    \n",
+    "    # flip coin to to dialect_transform as this is a transformation that needs to run before all other transformations\n",
     "    text_modified = text2\n",
+    "    if random.random() < 0.5:\n",
+    "        text_modified, changed = dialect_transform(text2)\n",
+    "\n",
     "    attempts = 20  # limit attempts to avoid infinite loops\n",
     "    while attempts > 0:\n",
-    "        if text_modified != text2:\n",
-    "            return text_modified\n",
-    "\n",
-    "        # Attempt three random transformation\n",
+    "        # Attempt two further random transformation\n",
     "        three_trans = random.sample(transformations, 3)\n",
     "        for transform in three_trans:\n",
     "            new_text, changed = transform(text_modified)\n",
     "            if changed:\n",
     "                text_modified = new_text\n",
     "        attempts -= 1\n",
+    "        if text_modified != text2:\n",
+    "            return text_modified\n",
     "\n",
     "    # If we exit the loop, we failed to reduce similarity\n",
     "    return text_modified\n",
@@ -535,8 +545,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-12T09:41:05.443903Z",
-     "start_time": "2024-12-12T09:41:05.414030Z"
+     "end_time": "2024-12-12T11:16:17.586249Z",
+     "start_time": "2024-12-12T11:16:17.583555Z"
     }
    },
    "id": "15964367d2573682"
@@ -760,7 +770,7 @@
     "collapsed": false,
     "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-12-12T09:41:05.417825Z"
+     "start_time": "2024-12-12T11:16:20.397798Z"
     }
    },
    "id": "498d9a270007d867"
