--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -2512,7 +2512,141 @@
       "Processing examples in test:  16%|█▌        | 1615/10000 [22:47<2:32:15,  1.09s/it]\u001B[A\n",
       "Processing examples in test:  16%|█▌        | 1616/10000 [22:50<3:25:28,  1.47s/it]\u001B[A\n",
       "Processing examples in test:  16%|█▌        | 1618/10000 [22:52<3:07:26,  1.34s/it]\u001B[A\n",
-      "Processing examples in test:  16%|█▌        | 1619/10000 [22:54<3:30:38,  1.51s/it]\u001B[A"
+      "Processing examples in test:  16%|█▌        | 1619/10000 [22:54<3:30:38,  1.51s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▌        | 1621/10000 [22:55<2:44:04,  1.17s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▌        | 1622/10000 [22:58<3:18:09,  1.42s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▌        | 1623/10000 [22:59<3:11:17,  1.37s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▌        | 1624/10000 [23:00<2:50:51,  1.22s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1627/10000 [23:01<1:47:56,  1.29it/s]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1628/10000 [23:02<1:56:09,  1.20it/s]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1630/10000 [23:03<1:31:30,  1.52it/s]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1634/10000 [23:05<1:24:09,  1.66it/s]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform A young boy sits outside in a grassy field with his back turned towards the viewer- he is holding a wooden toy that can be spun between your hands and launched into the air. or A young boy stands at the chalkboard to answer a math problem.. Retrying 5 more times ...\n",
+      "Failed to transform A young boy sits outside in a grassy field with his back turned towards the viewer- he is holding a wooden toy that can be spun between your hands and launched into the air. or A young boy stands at the chalkboard to answer a math problem.. Retrying 4 more times ...\n",
+      "Failed to transform A young boy sits outside in a grassy field with his back turned towards the viewer- he is holding a wooden toy that can be spun between your hands and launched into the air. or A young boy stands at the chalkboard to answer a math problem.. Retrying 3 more times ...\n",
+      "Failed to transform A young boy sits outside in a grassy field with his back turned towards the viewer- he is holding a wooden toy that can be spun between your hands and launched into the air. or A young boy stands at the chalkboard to answer a math problem.. Retrying 2 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  16%|█▋        | 1635/10000 [23:12<3:38:31,  1.57s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform A young boy sits outside in a grassy field with his back turned towards the viewer- he is holding a wooden toy that can be spun between your hands and launched into the air. or A young boy stands at the chalkboard to answer a math problem.. Retrying 1 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  16%|█▋        | 1636/10000 [23:14<3:50:29,  1.65s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1637/10000 [23:15<3:41:49,  1.59s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1638/10000 [23:17<3:52:03,  1.67s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1639/10000 [23:18<3:36:30,  1.55s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1640/10000 [23:21<4:23:37,  1.89s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1646/10000 [23:23<1:52:29,  1.24it/s]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1647/10000 [23:24<2:00:09,  1.16it/s]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1648/10000 [23:26<2:33:16,  1.10s/it]\u001B[A\n",
+      "Processing examples in test:  16%|█▋        | 1649/10000 [23:28<2:48:26,  1.21s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1651/10000 [23:30<2:36:34,  1.13s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1652/10000 [23:31<2:43:33,  1.18s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1656/10000 [23:34<1:55:35,  1.20it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1657/10000 [23:35<2:01:58,  1.14it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1658/10000 [23:36<2:10:43,  1.06it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1659/10000 [23:37<2:17:27,  1.01it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1660/10000 [23:38<2:22:51,  1.03s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1661/10000 [23:40<2:54:30,  1.26s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1663/10000 [23:42<2:40:19,  1.15s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1664/10000 [23:45<3:18:55,  1.43s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1666/10000 [23:47<3:10:03,  1.37s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1671/10000 [23:49<1:50:45,  1.25it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1672/10000 [23:51<2:20:47,  1.01s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1673/10000 [23:54<2:57:41,  1.28s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1674/10000 [23:55<2:55:25,  1.26s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1677/10000 [23:56<2:00:36,  1.15it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1680/10000 [23:58<1:49:26,  1.27it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1684/10000 [23:59<1:13:52,  1.88it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1685/10000 [24:01<1:39:30,  1.39it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1686/10000 [24:02<1:54:32,  1.21it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1688/10000 [24:04<1:43:13,  1.34it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1690/10000 [24:06<1:58:19,  1.17it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1693/10000 [24:07<1:36:39,  1.43it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1694/10000 [24:08<1:51:54,  1.24it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1696/10000 [24:11<2:00:38,  1.15it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1697/10000 [24:12<2:14:35,  1.03it/s]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform Man sitting on floor and is surrounded by picture. or A man sitting on the floor with pictures around him.. Retrying 5 more times ...\n",
+      "Failed to transform Man sitting on floor and is surrounded by picture. or A man sitting on the floor with pictures around him.. Retrying 4 more times ...\n",
+      "Failed to transform Man sitting floor and is surrounded by picture. or A man sitting on the floor with pictures around him.. Retrying 3 more times ...\n",
+      "Failed to transform A Man sitting a floor and is surrounded by a picture. or A man sitting on the floor with pictures around him.. Retrying 2 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  17%|█▋        | 1702/10000 [24:21<3:12:42,  1.39s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform The Man a-sitting the floor and is surrounded by the picture. or A man sitting on the floor with pictures around him.. Retrying 1 more times ...\n",
+      "Failed to transform with A man sitting on the floor with photographs around him.. Retrying 5 more times...\n",
+      "Failed to transform with A man sitting on the floor with photographs around him.. Retrying 4 more times...\n",
+      "Failed to transform with A man sitting on the floor with photographs around him.. Retrying 3 more times...\n",
+      "Failed to transform with A man sitting on the floor with photographs around him.. Retrying 2 more times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  17%|█▋        | 1703/10000 [24:25<4:03:31,  1.76s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform with A man sitting on the floor with photographs around him.. Retrying 1 more times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  17%|█▋        | 1706/10000 [24:27<3:10:18,  1.38s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1709/10000 [24:28<2:23:48,  1.04s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1710/10000 [24:29<2:31:05,  1.09s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1712/10000 [24:31<2:17:59,  1.00it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1713/10000 [24:33<2:38:05,  1.14s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1715/10000 [24:35<2:25:47,  1.06s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1716/10000 [24:37<2:54:00,  1.26s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1717/10000 [24:38<3:01:21,  1.31s/it]\u001B[A"
      ]
     }
    ],
