--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -2646,7 +2646,51 @@
       "Processing examples in test:  17%|█▋        | 1713/10000 [24:33<2:38:05,  1.14s/it]\u001B[A\n",
       "Processing examples in test:  17%|█▋        | 1715/10000 [24:35<2:25:47,  1.06s/it]\u001B[A\n",
       "Processing examples in test:  17%|█▋        | 1716/10000 [24:37<2:54:00,  1.26s/it]\u001B[A\n",
-      "Processing examples in test:  17%|█▋        | 1717/10000 [24:38<3:01:21,  1.31s/it]\u001B[A"
+      "Processing examples in test:  17%|█▋        | 1717/10000 [24:38<3:01:21,  1.31s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1718/10000 [24:40<3:32:29,  1.54s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1719/10000 [24:43<4:14:06,  1.84s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1720/10000 [24:45<3:56:54,  1.72s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1721/10000 [24:47<4:10:58,  1.82s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1726/10000 [24:48<1:58:05,  1.17it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1727/10000 [24:49<1:56:22,  1.18it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1728/10000 [24:52<2:34:27,  1.12s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1730/10000 [24:53<2:09:43,  1.06it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1731/10000 [24:54<2:16:00,  1.01it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1732/10000 [24:56<2:33:46,  1.12s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1733/10000 [24:58<3:27:42,  1.51s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1736/10000 [25:00<2:19:53,  1.02s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1737/10000 [25:01<2:12:38,  1.04it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1738/10000 [25:03<2:41:18,  1.17s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1739/10000 [25:04<2:46:42,  1.21s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1743/10000 [25:05<1:38:32,  1.40it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1745/10000 [25:06<1:33:17,  1.47it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1746/10000 [25:08<1:59:42,  1.15it/s]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1747/10000 [25:10<2:26:19,  1.06s/it]\u001B[A\n",
+      "Processing examples in test:  17%|█▋        | 1749/10000 [25:12<2:17:16,  1.00it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1750/10000 [25:13<2:29:12,  1.09s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1753/10000 [25:14<1:43:54,  1.32it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1754/10000 [25:17<2:22:51,  1.04s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1755/10000 [25:18<2:28:32,  1.08s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1756/10000 [25:20<2:51:22,  1.25s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1757/10000 [25:22<3:22:16,  1.47s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1758/10000 [25:24<3:47:59,  1.66s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1763/10000 [25:25<1:33:29,  1.47it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1768/10000 [25:26<1:08:38,  2.00it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1770/10000 [25:28<1:10:31,  1.94it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1774/10000 [25:30<1:08:56,  1.99it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1775/10000 [25:31<1:19:47,  1.72it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1776/10000 [25:33<1:47:01,  1.28it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1778/10000 [25:34<1:38:14,  1.39it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1780/10000 [25:35<1:29:51,  1.52it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1782/10000 [25:36<1:18:27,  1.75it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1783/10000 [25:36<1:25:29,  1.60it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1785/10000 [25:38<1:23:18,  1.64it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1786/10000 [25:39<1:48:46,  1.26it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1788/10000 [25:41<1:45:01,  1.30it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1789/10000 [25:42<2:16:32,  1.00it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1790/10000 [25:44<2:45:12,  1.21s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1791/10000 [25:45<2:37:10,  1.15s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1792/10000 [25:46<2:24:19,  1.06s/it]\u001B[A"
      ]
     }
    ],
