--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -2690,7 +2690,165 @@
       "Processing examples in test:  18%|█▊        | 1789/10000 [25:42<2:16:32,  1.00it/s]\u001B[A\n",
       "Processing examples in test:  18%|█▊        | 1790/10000 [25:44<2:45:12,  1.21s/it]\u001B[A\n",
       "Processing examples in test:  18%|█▊        | 1791/10000 [25:45<2:37:10,  1.15s/it]\u001B[A\n",
-      "Processing examples in test:  18%|█▊        | 1792/10000 [25:46<2:24:19,  1.06s/it]\u001B[A"
+      "Processing examples in test:  18%|█▊        | 1792/10000 [25:46<2:24:19,  1.06s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1794/10000 [25:48<2:17:04,  1.00s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1795/10000 [25:50<2:37:00,  1.15s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1797/10000 [25:51<2:24:15,  1.06s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1798/10000 [25:53<2:50:27,  1.25s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1800/10000 [25:54<2:09:21,  1.06it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1803/10000 [25:56<1:50:47,  1.23it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1806/10000 [25:58<1:41:34,  1.34it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1807/10000 [26:00<2:07:49,  1.07it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1810/10000 [26:02<1:51:13,  1.23it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1811/10000 [26:03<1:56:55,  1.17it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1812/10000 [26:05<2:20:40,  1.03s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1815/10000 [26:06<1:47:30,  1.27it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1816/10000 [26:09<2:21:52,  1.04s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1817/10000 [26:11<2:51:42,  1.26s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1820/10000 [26:12<1:50:37,  1.23it/s]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform Male wearing brown shorts and black t-shirt in his bedroom with his feet on the desk talking on the phone. or A man is talking to his wife on the phone.. Retrying 5 more times ...\n",
+      "Failed to transform Male wearing brown shorts and black t-shirt in his bedroom with his feet on the desk talking on the phone. or A man is talking to his wife on the phone.. Retrying 4 more times ...\n",
+      "Failed to transform Male wearing brown shorts and black t-shirt in his bedroom with his feet on the desk talking on the phone. or A man is talking to his wife on the phone.. Retrying 3 more times ...\n",
+      "Failed to transform Male wearing brown shorts and black t-shirt in his bedroom with his feet on the desk talking on the phone. or A man is talking to his wife on the phone.. Retrying 2 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  18%|█▊        | 1822/10000 [26:17<3:02:27,  1.34s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform Male wearing brown shorts and black t-shirt in his bedroom with his feet on the desk talking on the phone. or A man is talking to his wife on the phone.. Retrying 1 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  18%|█▊        | 1825/10000 [26:18<2:10:28,  1.04it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1826/10000 [26:19<2:08:11,  1.06it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1827/10000 [26:20<2:19:04,  1.02s/it]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1829/10000 [26:22<2:09:30,  1.05it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1831/10000 [26:23<1:55:07,  1.18it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1835/10000 [26:25<1:33:11,  1.46it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1836/10000 [26:27<2:03:55,  1.10it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1838/10000 [26:28<1:51:10,  1.22it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1839/10000 [26:30<2:08:41,  1.06it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1843/10000 [26:32<1:43:51,  1.31it/s]\u001B[A\n",
+      "Processing examples in test:  18%|█▊        | 1847/10000 [26:34<1:22:35,  1.65it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1851/10000 [26:36<1:17:20,  1.76it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1852/10000 [26:38<1:37:27,  1.39it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1854/10000 [26:39<1:27:55,  1.54it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1856/10000 [26:40<1:23:52,  1.62it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1858/10000 [26:42<1:45:21,  1.29it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1859/10000 [26:44<2:10:06,  1.04it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1862/10000 [26:46<1:48:01,  1.26it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1863/10000 [26:47<1:53:04,  1.20it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1864/10000 [26:49<2:34:27,  1.14s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1865/10000 [26:51<2:47:02,  1.23s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1867/10000 [26:52<2:23:37,  1.06s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1870/10000 [26:53<1:35:26,  1.42it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▊        | 1874/10000 [26:54<1:09:24,  1.95it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1877/10000 [26:56<1:09:13,  1.96it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1882/10000 [26:58<1:00:07,  2.25it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1884/10000 [26:58<57:15,  2.36it/s]  \u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1885/10000 [26:59<1:01:43,  2.19it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1886/10000 [27:00<1:20:47,  1.67it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1888/10000 [27:02<1:34:45,  1.43it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1890/10000 [27:03<1:22:58,  1.63it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1893/10000 [27:04<1:06:12,  2.04it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1894/10000 [27:05<1:29:41,  1.51it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1895/10000 [27:07<2:02:00,  1.11it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1896/10000 [27:09<2:27:57,  1.10s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1897/10000 [27:11<2:41:39,  1.20s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1900/10000 [27:13<2:05:09,  1.08it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1901/10000 [27:15<2:30:09,  1.11s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1902/10000 [27:15<2:22:06,  1.05s/it]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1904/10000 [27:16<1:45:25,  1.28it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1905/10000 [27:17<1:53:57,  1.18it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1909/10000 [27:18<1:11:46,  1.88it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1910/10000 [27:19<1:16:55,  1.75it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1911/10000 [27:20<1:19:47,  1.69it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1913/10000 [27:20<1:08:20,  1.97it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1916/10000 [27:22<1:00:47,  2.22it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1918/10000 [27:23<1:11:40,  1.88it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1919/10000 [27:24<1:18:56,  1.71it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1922/10000 [27:26<1:20:44,  1.67it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1924/10000 [27:26<1:11:19,  1.89it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1926/10000 [27:28<1:26:41,  1.55it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1928/10000 [27:29<1:14:38,  1.80it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1929/10000 [27:30<1:18:02,  1.72it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1930/10000 [27:32<1:53:26,  1.19it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1931/10000 [27:33<2:14:13,  1.00it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1933/10000 [27:35<2:02:22,  1.10it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1937/10000 [27:36<1:28:07,  1.53it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1939/10000 [27:38<1:39:06,  1.36it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1944/10000 [27:40<1:14:37,  1.80it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1947/10000 [27:41<1:03:37,  2.11it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1948/10000 [27:44<1:52:45,  1.19it/s]\u001B[A\n",
+      "Processing examples in test:  19%|█▉        | 1949/10000 [27:46<1:59:39,  1.12it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1951/10000 [27:47<1:54:16,  1.17it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1955/10000 [27:49<1:26:14,  1.55it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1956/10000 [27:50<1:46:23,  1.26it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1958/10000 [27:53<2:04:04,  1.08it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1959/10000 [27:56<2:42:08,  1.21s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1961/10000 [27:58<2:34:15,  1.15s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1966/10000 [28:00<1:39:47,  1.34it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1968/10000 [28:00<1:30:09,  1.48it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1969/10000 [28:02<1:40:19,  1.33it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1970/10000 [28:04<2:04:58,  1.07it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1971/10000 [28:06<2:35:21,  1.16s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1972/10000 [28:07<2:33:43,  1.15s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1973/10000 [28:08<2:50:42,  1.28s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1974/10000 [28:10<3:07:41,  1.40s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1976/10000 [28:12<2:41:48,  1.21s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1977/10000 [28:13<2:43:14,  1.22s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1979/10000 [28:15<2:34:32,  1.16s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1982/10000 [28:17<1:53:52,  1.17it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1983/10000 [28:24<4:31:28,  2.03s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1985/10000 [28:27<3:49:58,  1.72s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1986/10000 [28:28<3:53:17,  1.75s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1987/10000 [28:30<3:54:41,  1.76s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1991/10000 [28:32<2:08:31,  1.04it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1992/10000 [28:33<2:17:57,  1.03s/it]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1994/10000 [28:35<2:12:21,  1.01it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1998/10000 [28:36<1:26:03,  1.55it/s]\u001B[A\n",
+      "Processing examples in test:  20%|█▉        | 1999/10000 [28:37<1:45:55,  1.26it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2001/10000 [28:39<1:50:21,  1.21it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2002/10000 [28:40<1:56:43,  1.14it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2006/10000 [28:42<1:33:18,  1.43it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2011/10000 [28:44<1:11:04,  1.87it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2012/10000 [28:45<1:15:04,  1.77it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2015/10000 [28:47<1:19:37,  1.67it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2025/10000 [28:48<42:55,  3.10it/s]  \u001B[A\n",
+      "Processing examples in test:  20%|██        | 2026/10000 [28:51<1:01:46,  2.15it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2027/10000 [28:52<1:12:41,  1.83it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2028/10000 [28:54<1:36:19,  1.38it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2029/10000 [28:55<1:48:40,  1.22it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2031/10000 [28:56<1:36:03,  1.38it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2035/10000 [28:57<1:01:16,  2.17it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2036/10000 [28:58<1:21:33,  1.63it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2038/10000 [29:00<1:21:56,  1.62it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2039/10000 [29:01<1:49:16,  1.21it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2041/10000 [29:03<1:54:16,  1.16it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2044/10000 [29:04<1:27:57,  1.51it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2045/10000 [29:05<1:37:33,  1.36it/s]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2046/10000 [29:08<2:30:34,  1.14s/it]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2049/10000 [29:14<3:09:09,  1.43s/it]\u001B[A\n",
+      "Processing examples in test:  20%|██        | 2050/10000 [29:16<3:26:30,  1.56s/it]\u001B[A"
      ]
     }
    ],
